[package]
name = "nym_hs"
version = "0.1.0"
authors = ["Sebastian Geisler <sebastian@blockstream.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
structopt = "0.3.15"
tokio = { version = "0.2.21", features = [ "full" ] }
tokio-tungstenite = "0.10.1"
tokio-byteorder = "0.2.0"
tungstenite = "0.10.0"