[package]
name = "nym_hs"
version = "0.1.0"
authors = ["Sebastian Geisler <sebastian@blockstream.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bech32 = "0.7.2"
bincode = "1.3.1"
bs58 = "0.3.1"
futures = "0.3.5"
rand = "0.7.3"
serde =  { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
structopt = "0.3.15"
tokio = { version = "0.2.21", features = [ "full" ] }
tokio-tungstenite = "0.10.1"
tokio-byteorder = "0.2.0"
tracing = "0.1.18"
tracing-subscriber = "0.2.10"
tungstenite = "0.10.0"
